--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,6 +18,23 @@
 				<a href="#">Blog</a>
 				<a href="mailto:simon.mccul@gmail.com">Contact Us</a>
 			</nav>
+
+		<div class="mobile-nav">
+     		<div class="menu-btn" id="menu-btn">
+				<div></div>
+				<span></span>
+				<span></span>
+				<span></span>
+     		</div>
+     		<div class="responsive-menu">
+	        <ul>
+	        	<li><a href="#">Who We Are</a></li>
+				<li><a href="#">Get Involved</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="mailto:simon.mccul@gmail.com">Contact Us</a></li>
+	        </ul>
+     		</div>
+		</div>	
 	</header>
 	<section id="splash" class="clearfix">
 		<div class="wrappernew">
@@ -166,12 +184,20 @@
 	</div>
 
 <footer>
-	<p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once)</p>
+	<p>Podcal is a not for profit podcasting organisation. Get involved, or just listen (for once).</p>
 		<a href="#">Who We Are</a>
 		<a href="#">Get Involved</a>
 		<a href="#">Blog</a>
 		<a href="mailto:simon.mccul@gmail.com">Contact Us</a>
 </footer>
+
+<script type="text/javascript">
+		jQuery(function($){
+    	     $( '.menu-btn' ).click(function(){
+    	     $('.responsive-menu').toggleClass('expand')
+    	     })
+        })
+</script>
 
 </body>
 </html>
